SUBDIRS = gnu

sbin_PROGRAMS = iplog

iplog_SOURCES = getopt.c getopt1.c iplog_config.c iplog_dns.c iplog_icmp.c iplog_ident.c iplog_input.c iplog_lockfile.c iplog_options.c iplog_pcap.c iplog_scan.c iplog_syslog.c iplog_tcp.c iplog_udp.c iplog_util.c iplog.c snprintf.c

noinst_HEADERS = iplog.h iplog_config.h iplog_dns.h iplog_icmp.h \
	iplog_inet_header.h iplog_input.h iplog_options.h iplog_pcap.h \
	iplog_scan.h pcap-int.h
